Further Error Prone fixes.

--- a/pom.xml
+++ b/pom.xml
@@ -132,9 +132,11 @@
             <compilerArgs>
               <!-- Args related to Error Prone, see: https://errorprone.info/docs/installation#maven -->
               <arg>-XDcompilePolicy=simple</arg>
-              <arg>-Xplugin:ErrorProne -XepExcludedPaths:.*/generated-test-sources/protobuf/.*</arg>
-              <!-- Disable Error Prone's HidingField because of a NoSuchMethodError bug. -->
-              <arg>-Xep:HidingField:OFF</arg>
+              <arg>-Xplugin:ErrorProne
+                -XepExcludedPaths:.*/generated-test-sources/protobuf/.*
+                -Xep:HidingField:OFF <!-- Work around NoSuchMethodError bug. -->
+                -Xep:NotJavadoc:OFF <!-- Triggered by local class. -->
+              </arg>
               <!-- Enable all warnings, except for ones which cause issues when building with newer JDKs, see also
                 https://docs.oracle.com/en/java/javase/11/tools/javac.html -->
               <compilerArg>-Xlint:all,-options</compilerArg>
