Include bug URL in comment.

--- a/pom.xml
+++ b/pom.xml
@@ -134,7 +134,7 @@
               <arg>-XDcompilePolicy=simple</arg>
               <arg>-Xplugin:ErrorProne
                 -XepExcludedPaths:.*/generated-test-sources/protobuf/.*
-                -Xep:HidingField:OFF <!-- Work around NoSuchMethodError bug. -->
+                -Xep:HidingField:OFF <!-- https://github.com/google/error-prone/issues/3895 -->
                 -Xep:NotJavadoc:OFF <!-- Triggered by local class. -->
               </arg>
               <!-- Enable all warnings, except for ones which cause issues when building with newer JDKs, see also
