--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -48,7 +48,7 @@
     <dependency>
       <groupId>javax.annotation</groupId>
       <artifactId>jsr250-api</artifactId>
-      <version>1.0</version>
+      <version>1.0-20050927.133100</version>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
