--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,7 @@
 
   <modules>
     <module>gson</module>
+    <module>graal-native-image-test</module>
     <module>shrinker-test</module>
     <module>extras</module>
     <module>metrics</module>
@@ -183,6 +184,11 @@
             <failOnWarnings>true</failOnWarnings>
           </configuration>
         </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>3.1.2</version>
+          </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-jar-plugin</artifactId>
@@ -367,6 +373,7 @@
         </plugins>
       </build>
     </profile>
+
     <!-- Profile defining additional plugins to be executed for release -->
     <profile>
       <id>release</id>
