Enable 'quickBuild' mode
Seems to improve build speed, and at least for the previous issue with
`RecordComponent` still causes test failures (as expected) if the fix
is reverted.

--- a/graal-native-image-test/pom.xml
+++ b/graal-native-image-test/pom.xml
@@ -149,6 +149,9 @@
                 <goals>
                   <goal>test</goal>
                 </goals>
+                <configuration>
+                  <quickBuild>true</quickBuild>
+                </configuration>
               </execution>
             </executions>
             <dependencies>
