Fix graal-native-image-test module causing failure for 'Check API compatibility'
The 'Check API compatibility' workflow runs `mvn install` to install the
previous version to the local Maven repository to compare it afterwards.
However this fails for the graal-native-image-test module because it does
not produce a JAR.

Therefore skip execution of the maven-install-plugin for that module.

--- a/graal-native-image-test/pom.xml
+++ b/graal-native-image-test/pom.xml
@@ -87,6 +87,15 @@
         </plugin>
         <plugin>
           <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-install-plugin</artifactId>
+          <configuration>
+            <!-- This module has no 'main' source code, so no JAR is created which could be installed;
+              see maven-jar-plugin configuration above -->
+            <skip>true</skip>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
           <artifactId>maven-deploy-plugin</artifactId>
           <configuration>
             <!-- Not deployed -->
