--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,11 @@
         <artifactId>truth</artifactId>
         <version>1.1.5</version>
       </dependency>
+      <dependency>
+        <groupId>com.diffplug.spotless</groupId>
+        <artifactId>spotless-maven-plugin</artifactId>
+        <version>2.40.0</version>
+      </dependency>
     </dependencies>
   </dependencyManagement>
 
