--- a/pom.xml
+++ b/pom.xml
@@ -358,6 +358,38 @@
             </execution>
           </executions>
         </plugin>
+        <!-- Spotless plugin: keeps the code formatted following the google-java-styleguide -->
+        <plugin>
+          <groupId>com.diffplug.spotless</groupId>
+          <artifactId>spotless-maven-plugin</artifactId>
+          <version>2.40.0</version>
+          <configuration>
+            <formats>
+              <format>
+                <includes>
+                  <include>*.md</include>
+                  <include>.gitignore</include>
+                </includes>
+                <trimTrailingWhitespace/>
+                <endWithNewline/>
+                <indent>
+                  <tabs>true</tabs>
+                  <spacesPerTab>4</spacesPerTab>
+                </indent>
+              </format>
+            </formats>
+            <java>
+              <googleJavaFormat>
+                <style>GOOGLE</style>
+                <reflowLongStrings>true</reflowLongStrings>
+                <formatJavadoc>true</formatJavadoc>
+              </googleJavaFormat>
+              <importOrder />             <!-- Checks imports order -->
+              <removeUnusedImports />     <!-- Removes unused imports -->
+              <formatAnnotations />       <!-- Formats the annotations -->
+            </java>
+          </configuration>
+        </plugin>
       </plugins>
     </pluginManagement>
   </build>
