Replaces `tabs` with `spaces`

--- a/pom.xml
+++ b/pom.xml
@@ -373,7 +373,7 @@
                 <trimTrailingWhitespace/>
                 <endWithNewline/>
                 <indent>
-                  <tabs>true</tabs>
+                  <spaces>true</spaces>
                   <spacesPerTab>4</spacesPerTab>
                 </indent>
               </format>
