Excludes `Java17RecordReflectionTest`

--- a/pom.xml
+++ b/pom.xml
@@ -154,6 +154,7 @@
           <java>
             <excludes>
               <exclude>src/test/java/com/google/gson/functional/Java17RecordTest.java</exclude>
+              <exclude>src/test/java/com/google/gson/native_test/Java17RecordReflectionTest.java</exclude>
             </excludes>
             <googleJavaFormat>
               <style>GOOGLE</style>
