--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,45 @@
           </execution>
         </executions>
       </plugin>
+      <!-- Spotless plugin: keeps the code formatted following the google-java-styleguide -->
+      <plugin>
+      <groupId>com.diffplug.spotless</groupId>
+      <artifactId>spotless-maven-plugin</artifactId>
+      <version>2.40.0</version>
+      <executions>
+        <execution>
+          <goals>
+            <goal>check</goal>
+          </goals>
+        </execution>
+      </executions>
+      <configuration>
+      <formats>
+        <format>
+          <includes>
+            <include>*.md</include>
+            <include>.gitignore</include>
+          </includes>
+          <trimTrailingWhitespace/>
+          <endWithNewline/>
+          <indent>
+            <spaces>true</spaces>
+            <spacesPerTab>4</spacesPerTab>
+          </indent>
+        </format>
+      </formats>
+        <java>
+          <googleJavaFormat>
+            <style>GOOGLE</style>
+            <reflowLongStrings>true</reflowLongStrings>
+            <formatJavadoc>true</formatJavadoc>
+          </googleJavaFormat>
+          <importOrder />
+          <removeUnusedImports />
+          <formatAnnotations />     <!-- Puts type annotations immediately before types. -->.
+        </java>
+      </configuration>
+      </plugin>
     </plugins>
 
     <pluginManagement>
