--- a/pom.xml
+++ b/pom.xml
@@ -152,6 +152,10 @@
         </format>
       </formats>
         <java>
+          <excludes>
+            <exclude>src/test/java/com/google/gson/functional/Java17RecordTest.java</exclude>
+            <exclude>src/test/java/com/google/gson/native_test/Java17RecordReflectionTest.java</exclude>
+          </excludes>
           <googleJavaFormat>
             <style>GOOGLE</style>
             <reflowLongStrings>true</reflowLongStrings>
