--- a/pom.xml
+++ b/pom.xml
@@ -146,6 +146,7 @@
               <includes>
                 <include>*.md</include>
                 <include>*.xml</include>
+                <include>.github/**/*.yml</include>
                 <include>.gitignore</include>
               </includes>
               <!-- For Markdown files removing trailing whitespace causes issues for hard line breaks,
