Add comment about `source.scm.tag=HEAD` warning
Actually it looks like the warning is not actually caused by usage of
`HEAD` as value, but rather because the project has a snapshot version
during development (which is expected though), see
https://github.com/apache/maven-artifact-plugin/blob/maven-artifact-plugin-3.5.0/src/main/java/org/apache/maven/plugins/artifact/buildinfo/BuildInfoWriter.java#L140

But this is not a problem either since during release a non-snapshot
version is used.

--- a/pom.xml
+++ b/pom.xml
@@ -196,6 +196,9 @@
         <executions>
           <execution>
             <goals>
+              <!-- This logs a warning about `source.scm.tag=HEAD`, but this can be ignored;
+                during release Maven Release Plugin temporarily changes the `source.scm.tag`
+                value to the actual Git tag, which will then not cause a warning -->
               <goal>buildinfo</goal>
             </goals>
           </execution>
