Enforce that JDK <= 17 is used for building
Using JDK 21 currently causes multiple issues, some of which are not easy
to fix at the moment (such as target version 7 not being supported anymore).

--- a/pom.xml
+++ b/pom.xml
@@ -120,7 +120,9 @@
                 <!-- Enforce that correct JDK version is used to avoid cryptic build errors -->
                 <requireJavaVersion>
                   <!-- Other plugins of this build require at least JDK 11 -->
-                  <version>[11,)</version>
+                  <!-- Fail fast when building with JDK > 17 because it causes build failures,
+                    see https://github.com/google/gson/issues/2501 -->
+                  <version>[11,18)</version>
                 </requireJavaVersion>
               </rules>
             </configuration>
