--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,6 +11,12 @@ jobs:
     strategy:
       matrix:
         java: [ 11, 17 ]
+        # Custom JDK 21 configuration
+        include:
+          - java: 21
+            # Disable Enforcer check which (intentionally) prevents using JDK 21 for building
+            # Exclude 'shrinker-test' module because R8 does not support JDK 21 yet
+            extra-mvn-args: -Denforcer.fail=false --projects '!:shrinker-test'
     runs-on: ubuntu-latest
 
     steps:
@@ -23,7 +29,7 @@ jobs:
           cache: 'maven'
       - name: Build with Maven
         # This also runs javadoc:jar to detect any issues with the Javadoc generated during release
-        run: mvn --batch-mode --no-transfer-progress verify javadoc:jar
+        run: mvn --batch-mode --no-transfer-progress verify javadoc:jar ${{ matrix.extra-mvn-args || '' }}
 
   native-image-test:
     name: "GraalVM Native Image test"
