Add CI build using JDK 21 (#2552)
* Add CI build using JDK 21

This is mainly to make sure that besides the known JDK 21 build
incompatibilities Gson can be built and run using JDK 21.

* Update ProGuard

* Update Protobuf

3.25.1 is actually newer than 4.0.0-rc-2

--- a/pom.xml
+++ b/pom.xml
@@ -463,6 +463,20 @@
       </build>
     </profile>
 
+    <!-- Slightly adjust build to support building with JDK >= 21
+      However, by default this will intentionally be blocked by the Maven Enforcer Plugin defined above
+      and must be explicitly circumvented to avoid building non-release Gson artifacts by accident -->
+    <profile>
+      <id>jdk21+</id>
+      <activation>
+        <jdk>[21,)</jdk>
+      </activation>
+      <properties>
+        <!-- JDK 21 does not support Java 7 as release, must use at least Java 8 -->
+        <maven.compiler.release>8</maven.compiler.release>
+      </properties>
+    </profile>
+
     <!-- Profile defining additional plugins to be executed for release -->
     <profile>
       <id>release</id>
