Run shrinker-test for JDK 21 CI build
The latest R8 version seems to support JDK 21 now.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,7 @@ jobs:
         include:
           - java: 21
             # Disable Enforcer check which (intentionally) prevents using JDK 21 for building
-            # Exclude 'shrinker-test' module because R8 does not support JDK 21 yet
-            extra-mvn-args: -Denforcer.fail=false --projects '!:shrinker-test'
+            extra-mvn-args: -Denforcer.fail=false
     runs-on: ubuntu-latest
 
     steps:
