Use Truth for unit tests in `proto` and `extras` module

--- a/extras/pom.xml
+++ b/extras/pom.xml
@@ -62,6 +62,11 @@
       <artifactId>junit</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>com.google.truth</groupId>
+      <artifactId>truth</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
   <build>
