--- a/shrinker-test/pom.xml
+++ b/shrinker-test/pom.xml
@@ -22,15 +22,14 @@
     <artifactId>gson-parent</artifactId>
     <version>2.11.1-SNAPSHOT</version>
   </parent>
-
   <artifactId>shrinker-test</artifactId>
+  <name>Test: Code shrinking (ProGuard / R8)</name>
 
   <properties>
-    <!-- Make the build reproducible, see root `pom.xml` -->
-    <!-- This is duplicated here because that is recommended by `artifact:check-buildplan` -->
-    <project.build.outputTimestamp>2024-05-19T18:54:10Z</project.build.outputTimestamp>
-
     <maven.compiler.release>8</maven.compiler.release>
+
+    <!-- Overwrite property from parent -->
+    <gson.isTestModule>true</gson.isTestModule>
   </properties>
 
   <pluginRepositories>
@@ -61,35 +60,6 @@
   </dependencies>
 
   <build>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>com.github.siom79.japicmp</groupId>
-          <artifactId>japicmp-maven-plugin</artifactId>
-          <configuration>
-            <!-- This module is not supposed to be consumed as library, so no need to check API -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.codehaus.mojo</groupId>
-          <artifactId>animal-sniffer-maven-plugin</artifactId>
-          <configuration>
-            <!-- This module is not supposed to be consumed as library, so no need to check used classes -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-deploy-plugin</artifactId>
-          <configuration>
-            <!-- Not deployed -->
-            <skip>true</skip>
-          </configuration>
-        </plugin>
-      </plugins>
-    </pluginManagement>
-
     <plugins>
       <!-- Process JAR with ProGuard -->
       <plugin>
